# eco_friend_ui

./: Cargo.toml  index.html  styles.css
src/: main.rs
src/components/: button.rs  nav_bar.rs  notification.rs  place_form.rs  text_input.rs
src/pages/: calculator.rs  home.rs  not_found.rs  report.rs
